objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>test</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>texting 2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>